fixed header image carousel/headline text align

--- a/ui/sass/brands/kisqali2/components/carousel.scss
+++ b/ui/sass/brands/kisqali2/components/carousel.scss
@@ -24,32 +24,50 @@
 		display: block;
 
 	}
-	&:before {
-		content: '';
+	// &:before {
+	// 	content: '';
+	// 	position: absolute;
+	// 	width: 100%;
+	// 	height: 100%;
+	// 	z-index: 2;
+	// 	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+50&amp;0.45+0,0+50 */
+	// 	background: -moz-linear-gradient(top,  $color-trans-4 0%, rgba(0,0,0,0) 75%); /* FF3.6+ */
+	// 	background: -webkit-linear-gradient(top,  $color-trans-4 0%,rgba(0,0,0,0) 75%); /* Chrome10+,Safari5.1+ */
+	// 	background: -o-linear-gradient(top,  $color-trans-4 0%,rgba(0,0,0,0) 75%); /* Opera 11.10+ */
+	// 	background: -ms-linear-gradient(top,  $color-trans-4 0%,rgba(0,0,0,0) 75%); /* IE10+ */
+	// 	background: linear-gradient(to bottom,  $color-trans-4 0%,rgba(0,0,0,0) 75%); /* W3C */
+	// 	@media (min-width: $breakpoint-desktop + 1px) {
+	// 		top: 71px;
+	// 		height: 376px;
+	// 	}
+	// }
+	.bob{
 		position: absolute;
-		width: 100%;
-		height: 100%;
-		z-index: 2;
-		/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+50&amp;0.45+0,0+50 */
-		background: -moz-linear-gradient(top,  $color-trans-4 0%, rgba(0,0,0,0) 75%); /* FF3.6+ */
-		background: -webkit-linear-gradient(top,  $color-trans-4 0%,rgba(0,0,0,0) 75%); /* Chrome10+,Safari5.1+ */
-		background: -o-linear-gradient(top,  $color-trans-4 0%,rgba(0,0,0,0) 75%); /* Opera 11.10+ */
-		background: -ms-linear-gradient(top,  $color-trans-4 0%,rgba(0,0,0,0) 75%); /* IE10+ */
-		background: linear-gradient(to bottom,  $color-trans-4 0%,rgba(0,0,0,0) 75%); /* W3C */
-		@media (min-width: $breakpoint-desktop + 1px) {
-			top: 71px;
-			height: 376px;
-		}
+	    width: 100%;
+	    max-width: 1240px;
+	    z-index: 9999;
+	    display: block;
+	    left: 0;
+	    right: 0;
+	    margin-left: auto;
+	    margin-right: auto;
+
+	    h1{
+	    	display: block;
+	    }
 	}
+
 	h1 {
+		display: none;
+		background-color:rgba(255,255,255,0.85);
 		margin: 0;
 		top: 40px;
-		padding: 0 17.5%;
+		padding: 1em;
 		text-align: center;
 		position: absolute;
 		width: 100%;
 		z-index: 1;
-		color: $color-white;
+		color: #023761;
 		font-size: 18px;
 		line-height: 1;
 		text-transform: none;
@@ -58,17 +76,17 @@
 			font-size: 20px;
 		}
 	}
+
 	@include desktop {
 		overflow: hidden;
 		h1 {
-			text-align: center;
-			color: $color-white;
+			text-align: left;
 			position: absolute;
+			text-transform: uppercase;
 			top: 130px;
-			width: 540px;
-			padding: 0;
-			left: 50%;
-			margin-left: -270px;
+			width: auto;
+			left: 0%;
+			margin-left: 0px;
 			z-index: 2;
 			font-size: 40px;
 			&> * {
@@ -108,10 +126,10 @@
 		height: 240px;
 	}
 	@include desktop {
-		top: 71px;
+		top: -19px;
 		position: fixed;
 		overflow: hidden;
-		height: 376px;
+		height: 666px;
 	}
 }
 .hero-img-fader {
@@ -154,6 +172,7 @@
 	}
 }
 .carouselblock {
+	padding:0 !important;
 	position: relative;
 	.content {
 		position: relative;
@@ -247,14 +266,17 @@
 			left: 0;
 			top: 0;
 			&-item {
+				img{
+					display: none;
+				}
 				&.active {
 					.carousel-item-img {
-						opacity: 1;
+						opacity: 0 !important;
 					}
 				}
 				.carousel-item-img {
-					display: block;
-					opacity: 0;
+					display: none;
+					opacity: 0 !important;
 					transition: all 0.3s ease;
 					position: absolute;
 					width: 100%;
@@ -475,7 +497,7 @@
 		}
 		&.active .carousel-item-img {
 			z-index: 1;
-			opacity: 1;
+			opacity: 0 !important;
 		}
 	}
 	.carousel-item-img {
@@ -508,7 +530,7 @@
 		.carousel-item-img,
 		.carousel-item-img-hero {
 			z-index: 1;
-			opacity: 1;
+			opacity: 0 !important;
 		}
 	}
 	&.haslink {
